Part II of modeling - polynomial features

--- a/code/modeliing_i.ipynb
+++ b/code/modeliing_i.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "abb34d4c",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,30 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.ensemble import BaggingRegressor\n",
     "from sklearn.svm import SVR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b5348b86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "6150016a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The following is in case I need it later. As, it seems quite barbaric to sort through the list each one... however this would require\n",
+    "#changing the numbers into a dataframe.\n",
+    "\n",
+    "def log_prepper(num):\n",
+    "    return min(0, num)"
    ]
   },
   {
@@ -533,9 +557,7 @@
    "id": "660d6190",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pausepaus"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -965,17 +987,17 @@
     }
    ],
    "source": [
-    "pipe = Pipeline([\n",
-    "    ('svr', SVR())\n",
-    "])\n",
-    "pipe_params = {'svr__kernel' : ['rbf'] #Eh, taking too long to do all of them... just go with rbf for now\n",
-    "               ,'svr__C' : [.9, .95 , 1]\n",
-    "              }\n",
-    "gs = GridSearchCV(pipe,\n",
-    "                  param_grid=pipe_params,\n",
-    "                  cv=5)\n",
+    "# pipe = Pipeline([\n",
+    "#     ('svr', SVR())\n",
+    "# ])\n",
+    "# pipe_params = {'svr__kernel' : ['rbf'] #Eh, taking too long to do all of them... just go with rbf for now\n",
+    "#                ,'svr__C' : [.9, .95 , 1]\n",
+    "#               }\n",
+    "# gs = GridSearchCV(pipe,\n",
+    "#                   param_grid=pipe_params,\n",
+    "#                   cv=5)\n",
     "\n",
-    "gs.fit(X_train, y_train)"
+    "# gs.fit(X_train, y_train)"
    ]
   },
   {
@@ -1005,25 +1027,383 @@
     }
    ],
    "source": [
-    "preds_model_defaults = rf.predict(X_test)\n",
+    "# preds_model_defaults = rf.predict(X_test)\n",
+    "# for i in range(len(preds_model_defaults)):\n",
+    "#     if preds_model_defaults[i] < 0:\n",
+    "#         preds_model_defaults[i] = 0\n",
+    "\n",
+    "# print(gs.score(X_train, y_train), gs.score(X_test, y_test))\n",
+    "# print(gs.best_score_)\n",
+    "# print(gs.best_params_)\n",
+    "        \n",
+    "# root_mean_squared_log_error(y_test, preds_model_defaults)\n",
+    "\n",
+    "##0.6187870521022931 0.6175574607103471 #Commenting out as it took way too long... note that it has the same RMSLE as forests\n",
+    "## 0.6167895215540445\n",
+    "## {'svr__C': 1, 'svr__kernel': 'rbf'}\n",
+    "## 0.15345037771109488"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4ff7c0f",
+   "metadata": {},
+   "source": [
+    "So, bottom line we 'like' the accuracy and processing time of Random Forests. Perhaps regression is just that intense, or I'm underappeicating how giant this dataset is, but SVR took forever. So, likely we'll jump just do Forests as we move on. We'll see."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9c47d93",
+   "metadata": {},
+   "source": [
+    "## The Start of Feature Engineering: Polynomials\n",
+    "\n",
+    "We'll keep things PG and just go up to squared terms, naturally considering interaction effects as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "ccd5289d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop('rings', axis=1)\n",
+    "y = df['rings']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.25, random_state=26)\n",
+    "\n",
+    "poly = PolynomialFeatures(degree = 2, include_bias=False)\n",
+    "X_train_poly = poly.fit_transform(X_train)\n",
+    "X_test_poly = poly.transform(X_test)\n",
+    "\n",
+    "df_poly_train = pd.DataFrame(X_train_poly, columns=poly.get_feature_names_out(X.columns)) #We'll use this later\n",
+    "df_poly_test = pd.DataFrame(X_test_poly, columns=poly.get_feature_names_out(X.columns))\n",
+    "\n",
+    "mms = MinMaxScaler()\n",
+    "X_train = mms.fit_transform(X_train)\n",
+    "X_test = mms.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c1ff7c41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(poly.get_feature_names_out(X.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "efa6ef60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "0.637502643156102 0.6391210169168662\n",
+      "[0.61664033 0.61906504 0.62020718 0.62345992 0.62343427 0.62558104\n",
+      " 0.62686518 0.6280259  0.62854671 0.62875105 0.62839985 0.62840971\n",
+      " 0.6287009  0.62930472 0.62911993 0.62926181 0.62897665 0.62941128\n",
+      " 0.62974946 0.62969177 0.6300942  0.63044306 0.63204007 0.63281593\n",
+      " 0.6332747  0.63349061 0.6335524  0.63323694 0.633351   0.633187\n",
+      " 0.63318795 0.63320335 0.63326952 0.63328497 0.63329516 0.63333263\n",
+      " 0.63334052 0.63339293 0.63334014 0.6333579  0.63336914 0.63336319\n",
+      " 0.63336625 0.63336738 0.63336738]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.1562207342973044"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Hmm, so a maximum of 54 features now. let's do this!\n",
+    "\n",
+    "lr = LinearRegression()\n",
+    "rfe = RFECV(lr, step=1, cv=5,\n",
+    "                       min_features_to_select=35)\n",
+    "\n",
+    "model_defaults = rfe.fit(X_train_poly, y_train)\n",
+    "\n",
+    "preds_model_defaults = rfe.predict(X_test_poly)#And we're somehow getting some negative predictions.... note that againt his is\n",
+    "#without any feature engineering.... Regardless, we'll just brute force it. Unsure if we have a better wayt han the following:\n",
+    "\n",
     "for i in range(len(preds_model_defaults)):\n",
     "    if preds_model_defaults[i] < 0:\n",
     "        preds_model_defaults[i] = 0\n",
+    "print(preds_model_defaults[preds_model_defaults<0])\n",
     "\n",
-    "print(gs.score(X_train, y_train), gs.score(X_test, y_test))\n",
-    "print(gs.best_score_)\n",
-    "print(gs.best_params_)\n",
-    "        \n",
-    "root_mean_squared_log_error(y_test, preds_model_defaults)\n"
+    "print(model_defaults.score(X_train_poly, y_train), model_defaults.score(X_test_poly, y_test))\n",
+    "print(model_defaults.cv_results_['mean_test_score'])\n",
+    "root_mean_squared_log_error(y_test, preds_model_defaults)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "0b738753",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array(['x0', 'x1', 'x2', 'x3', 'x4', 'x6', 'x9', 'x10', 'x11', 'x12',\n",
+       "       'x13', 'x14', 'x15', 'x18', 'x19', 'x20', 'x21', 'x22', 'x23',\n",
+       "       'x26', 'x28', 'x29', 'x30', 'x31', 'x34', 'x35', 'x36', 'x39',\n",
+       "       'x40', 'x41', 'x42', 'x44', 'x45', 'x46', 'x48', 'x49'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(model_defaults.n_features_)\n",
+    "model_defaults.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "74fe0d37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Likely some better method exists, but eh...\n",
+    "\n",
+    "targets = []\n",
+    "for i in model_defaults.get_feature_names_out():\n",
+    "    targets.append(int(i[1:]))\n",
+    "target_columns = []\n",
+    "for i in targets:\n",
+    "    target_columns.append(df_poly_train.columns[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "2fca4eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['length',\n",
+       " 'diameter',\n",
+       " 'height',\n",
+       " 'whole_weight',\n",
+       " 'whole_weight1',\n",
+       " 'shell_weight']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_columns[:6] #Hmm, so on a pure scale we are disregarding the second weight as well as pure sex variables. Howeve,r htey\n",
+    "#do manifest in conjecture with others.\n",
+    "\n",
+    "#Recall earlier how we proposed that inherently, likely, the sex is meaningless and just a proxy for expected weights. So,\n",
+    "#perhaps this is inline with what we assumed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "297bb748",
+   "metadata": {},
+   "source": [
+    "Recall that the pure linear rmsle with lr was 0.16508650876858538.\n",
+    "\n",
+    "Hmm, originally I'm doing this after min/max scaling...yeah that's probably not a move as perhaps the scaling is interfering with their effects. Oh, while all that is true I had a more fundamental mistake - NOOB remember to score around the POLY dataset and not the original one...\n",
+    "\n",
+    "There we go, at 50 we already have a much lower RMSLE of .156. Let's keep on going for a while."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e41a16de",
+   "id": "35e6b06a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#I'll leave the name the same, so note how now it's just the subset per the earlier linear regression.\n",
+    "\n",
+    "X_train_poly = np.array(df_poly_train[target_columns])\n",
+    "X_test_poly = np.array(df_poly_test[target_columns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a719ddfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9500471760962943 0.6566633589144847\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.15307428574200113"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor(random_state=26)\n",
+    "\n",
+    "model_defaults = rf.fit(X_train_poly, y_train)\n",
+    "\n",
+    "preds_model_defaults = rf.predict(X_test_poly)\n",
+    "\n",
+    "for i in range(len(preds_model_defaults)):\n",
+    "    if preds_model_defaults[i] < 0:\n",
+    "        preds_model_defaults[i] = 0\n",
+    "\n",
+    "print(model_defaults.score(X_train_poly, y_train), model_defaults.score(X_test_poly, y_test))\n",
+    "# print(cross_val_score(rf, \n",
+    "#                       X_train, y_train, cv = 5).mean()) #Yeah,c ommenting this guy out... taking too long plus a bit redundant\n",
+    "# #Given that random forests are already aggregativing everything\n",
+    "root_mean_squared_log_error(y_test, preds_model_defaults)\n",
+    "\n",
+    "#A fair bit lower... Hmm. My intuition tells me to even keep on going for now and get to logs first. So, perhaps\n",
+    "#we'll return and actually tune the forest's parameters.\n",
+    "\n",
+    "#Tempted to do SVR just cause I need to be afk for a while...yeah why not. Let's do it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d58bbbf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Potential future spot for bagged forests x polys."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "ea87a6e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(22653, 36)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_poly = np.array(df_poly_train[target_columns])\n",
+    "X_test_poly = np.array(df_poly_test[target_columns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "4b71937f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6256051790865003 0.6257469825562314\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.1549904012357784"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svr = SVR() #Going with defautls at least for now\n",
+    "\n",
+    "svr = svr.fit(X_train_poly, y_train)\n",
+    "\n",
+    "preds_model_defaults = svr.predict(X_test_poly)\n",
+    "for i in range(len(preds_model_defaults)):\n",
+    "    if preds_model_defaults[i] < 0:\n",
+    "        preds_model_defaults[i] = 0\n",
+    "\n",
+    "print(svr.score(X_train_poly, y_train), svr.score(X_test_poly, y_test))\n",
+    "        \n",
+    "root_mean_squared_log_error(y_test, preds_model_defaults)\n",
+    "\n",
+    "#Aww, all that waiting and not even better than the forests."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27fbc4c8",
+   "metadata": {},
+   "source": [
+    "So, we'e made a bit of progress with introducing polynomial degree 2 and interaction effects. While RF is still our best and preferred model, we're down from .15345 to .15307 RMSLE."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a08bcd1e",
+   "metadata": {},
+   "source": [
+    "## Round II - Logs\n",
+    "\n",
+    "As we predicted we'd have to do, given assumptions in using a log based metric (first time using such a thing so I honestly don't know if it's grounded anywhere. We'd do it anyways, but still...)"
+   ]
   },
   {
    "cell_type": "code",
