--- a/code/modeling_i.ipynb
+++ b/code/modeling_i.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b5348b86",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4ca94d85",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "4        0.1975      9  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "12f8249c",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "4        0.1975      9      1      0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,6 +1397,161 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff84b8cf",
+   "metadata": {},
+   "source": [
+    "## Round I.5\n",
+    "\n",
+    "I was on the sofa, relaxing with some William James (ironic that this happeneded in his section on 'Time'), and I recalled that it behooves me to also check if perhaps the features, whether linear or polynomial, possess a stronger/more accurate relationship with rings when rings are squared."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c28f113d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Unless I find particular succuess in this, I'll just do linear and forests\n",
+    "\n",
+    "X = df.drop('rings', axis=1)\n",
+    "y = df['rings']**2\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.25, random_state=26)\n",
+    "\n",
+    "poly = PolynomialFeatures(degree = 2, include_bias=False)\n",
+    "X_train_poly = poly.fit_transform(X_train)\n",
+    "X_test_poly = poly.transform(X_test)\n",
+    "\n",
+    "df_poly_train = pd.DataFrame(X_train_poly, columns=poly.get_feature_names_out(X.columns)) #We'll use this later\n",
+    "df_poly_test = pd.DataFrame(X_test_poly, columns=poly.get_feature_names_out(X.columns))\n",
+    "\n",
+    "mms = MinMaxScaler()\n",
+    "X_train = mms.fit_transform(X_train)\n",
+    "X_test = mms.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "21e834e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "0.5362205789508885 0.535225347225045\n",
+      "[0.53084338 0.53122091 0.53112899 0.53113058 0.53160492 0.53171323\n",
+      " 0.53171953 0.5314713  0.53149092 0.53148084 0.53145503 0.53145165\n",
+      " 0.53152492 0.53152079 0.53152905 0.53151887 0.53163101 0.53163282\n",
+      " 0.53164606 0.53162944 0.53151049 0.53152383 0.53151271 0.53152181\n",
+      " 0.53152181]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.36388271962439356"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr = LinearRegression()\n",
+    "rfe = RFECV(lr, step=1, cv=5,\n",
+    "                       min_features_to_select=30)\n",
+    "\n",
+    "model_defaults = rfe.fit(X_train_poly, y_train)\n",
+    "\n",
+    "preds_model_defaults = rfe.predict(X_test_poly)#And we're somehow getting some negative predictions.... note that againt his is\n",
+    "#without any feature engineering.... Regardless, we'll just brute force it. Unsure if we have a better wayt han the following:\n",
+    "\n",
+    "for i in range(len(preds_model_defaults)):\n",
+    "    if preds_model_defaults[i] < 0:\n",
+    "        preds_model_defaults[i] = 0\n",
+    "print(preds_model_defaults[preds_model_defaults<0])\n",
+    "\n",
+    "print(model_defaults.score(X_train_poly, y_train), model_defaults.score(X_test_poly, y_test))\n",
+    "print(model_defaults.cv_results_['mean_test_score'])\n",
+    "root_mean_squared_log_error(y_test, preds_model_defaults)\n",
+    "\n",
+    "#Oh, that's much worse... well, I ain't given' up yet!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6c5249f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model_defaults.n_features_)\n",
+    "\n",
+    "targets = []\n",
+    "for i in model_defaults.get_feature_names_out():\n",
+    "    targets.append(int(i[1:]))\n",
+    "target_columns = []\n",
+    "for i in targets:\n",
+    "    target_columns.append(df_poly_train.columns[i])\n",
+    "    \n",
+    "X_train_poly = np.array(df_poly_train[target_columns])\n",
+    "X_test_poly = np.array(df_poly_test[target_columns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "afe8250d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9353330249126093 0.5540950426000051\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.34327315748689535"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf = RandomForestRegressor(random_state=26)\n",
+    "\n",
+    "model_defaults = rf.fit(X_train_poly, y_train)\n",
+    "\n",
+    "preds_model_defaults = rf.predict(X_test_poly)\n",
+    "\n",
+    "for i in range(len(preds_model_defaults)):\n",
+    "    if preds_model_defaults[i] < 0:\n",
+    "        preds_model_defaults[i] = 0\n",
+    "\n",
+    "print(model_defaults.score(X_train_poly, y_train), model_defaults.score(X_test_poly, y_test))\n",
+    "root_mean_squared_log_error(y_test, preds_model_defaults)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a08bcd1e",
    "metadata": {},
    "source": [
@@ -1404,6 +1559,30 @@
     "\n",
     "As we predicted we'd have to do, given assumptions in using a log based metric (first time using such a thing so I honestly don't know if it's grounded anywhere. We'd do it anyways, but still...)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3156521",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78e0e9c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e64b7871",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
