Log modeling (pt 1) and first submissions

--- a/code/cleaning_and_eda_i.ipynb
+++ b/code/cleaning_and_eda_i.ipynb
@@ -876,6 +876,516 @@
    "source": [
     "# df.to_csv('../data/cleaned_train.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32fff0fb",
+   "metadata": {},
+   "source": [
+    "## Prepping the Test Data\n",
+    "\n",
+    "I will, however, use this notebook to prep the test data in essentially the same way:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0d336e8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60411, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>Diameter</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Whole weight</th>\n",
+       "      <th>Whole weight.1</th>\n",
+       "      <th>Whole weight.2</th>\n",
+       "      <th>Shell weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90615</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0.645</td>\n",
+       "      <td>0.475</td>\n",
+       "      <td>0.155</td>\n",
+       "      <td>1.2380</td>\n",
+       "      <td>0.6185</td>\n",
+       "      <td>0.3125</td>\n",
+       "      <td>0.3005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90616</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0.580</td>\n",
+       "      <td>0.460</td>\n",
+       "      <td>0.160</td>\n",
+       "      <td>0.9830</td>\n",
+       "      <td>0.4785</td>\n",
+       "      <td>0.2195</td>\n",
+       "      <td>0.2750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90617</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0.560</td>\n",
+       "      <td>0.420</td>\n",
+       "      <td>0.140</td>\n",
+       "      <td>0.8395</td>\n",
+       "      <td>0.3525</td>\n",
+       "      <td>0.1845</td>\n",
+       "      <td>0.2405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>90618</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0.570</td>\n",
+       "      <td>0.490</td>\n",
+       "      <td>0.145</td>\n",
+       "      <td>0.8740</td>\n",
+       "      <td>0.3525</td>\n",
+       "      <td>0.1865</td>\n",
+       "      <td>0.2350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>90619</td>\n",
+       "      <td>I</td>\n",
+       "      <td>0.415</td>\n",
+       "      <td>0.325</td>\n",
+       "      <td>0.110</td>\n",
+       "      <td>0.3580</td>\n",
+       "      <td>0.1575</td>\n",
+       "      <td>0.0670</td>\n",
+       "      <td>0.1050</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id Sex  Length  Diameter  Height  Whole weight  Whole weight.1  \\\n",
+       "0  90615   M   0.645     0.475   0.155        1.2380          0.6185   \n",
+       "1  90616   M   0.580     0.460   0.160        0.9830          0.4785   \n",
+       "2  90617   M   0.560     0.420   0.140        0.8395          0.3525   \n",
+       "3  90618   M   0.570     0.490   0.145        0.8740          0.3525   \n",
+       "4  90619   I   0.415     0.325   0.110        0.3580          0.1575   \n",
+       "\n",
+       "   Whole weight.2  Shell weight  \n",
+       "0          0.3125        0.3005  \n",
+       "1          0.2195        0.2750  \n",
+       "2          0.1845        0.2405  \n",
+       "3          0.1865        0.2350  \n",
+       "4          0.0670        0.1050  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('../data/test.csv/test.csv')\n",
+    "print(df.shape)\n",
+    "df.head() #Quite a nice number of rows..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a14892f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Unneeded, but eh...\n",
+    "\n",
+    "df.columns = df.columns.str.lower()\n",
+    "df.columns = df.columns.str.replace(' ', '_')\n",
+    "df.columns = df.columns.str.replace('.', '') #Perhaps I should go ahead and do dummies now, but eh..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f6cf5850",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>length</th>\n",
+       "      <th>diameter</th>\n",
+       "      <th>height</th>\n",
+       "      <th>whole_weight</th>\n",
+       "      <th>whole_weight1</th>\n",
+       "      <th>whole_weight2</th>\n",
+       "      <th>shell_weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>60411.000000</td>\n",
+       "      <td>60411.000000</td>\n",
+       "      <td>60411.000000</td>\n",
+       "      <td>60411.000000</td>\n",
+       "      <td>60411.000000</td>\n",
+       "      <td>60411.000000</td>\n",
+       "      <td>60411.000000</td>\n",
+       "      <td>60411.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>120820.000000</td>\n",
+       "      <td>0.517428</td>\n",
+       "      <td>0.401961</td>\n",
+       "      <td>0.135751</td>\n",
+       "      <td>0.790062</td>\n",
+       "      <td>0.341227</td>\n",
+       "      <td>0.169419</td>\n",
+       "      <td>0.226125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>17439.297893</td>\n",
+       "      <td>0.117609</td>\n",
+       "      <td>0.097470</td>\n",
+       "      <td>0.038175</td>\n",
+       "      <td>0.457591</td>\n",
+       "      <td>0.204221</td>\n",
+       "      <td>0.100720</td>\n",
+       "      <td>0.129826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>90615.000000</td>\n",
+       "      <td>0.075000</td>\n",
+       "      <td>0.055000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.002000</td>\n",
+       "      <td>0.001000</td>\n",
+       "      <td>0.000500</td>\n",
+       "      <td>0.001500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>105717.500000</td>\n",
+       "      <td>0.450000</td>\n",
+       "      <td>0.345000</td>\n",
+       "      <td>0.110000</td>\n",
+       "      <td>0.419500</td>\n",
+       "      <td>0.178500</td>\n",
+       "      <td>0.086500</td>\n",
+       "      <td>0.120000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>120820.000000</td>\n",
+       "      <td>0.545000</td>\n",
+       "      <td>0.425000</td>\n",
+       "      <td>0.140000</td>\n",
+       "      <td>0.801500</td>\n",
+       "      <td>0.329000</td>\n",
+       "      <td>0.166000</td>\n",
+       "      <td>0.225000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>135922.500000</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.470000</td>\n",
+       "      <td>0.160000</td>\n",
+       "      <td>1.070000</td>\n",
+       "      <td>0.464500</td>\n",
+       "      <td>0.232500</td>\n",
+       "      <td>0.305000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>151025.000000</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.650000</td>\n",
+       "      <td>1.095000</td>\n",
+       "      <td>2.825500</td>\n",
+       "      <td>1.488000</td>\n",
+       "      <td>0.641500</td>\n",
+       "      <td>1.004000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  id        length      diameter        height  whole_weight  \\\n",
+       "count   60411.000000  60411.000000  60411.000000  60411.000000  60411.000000   \n",
+       "mean   120820.000000      0.517428      0.401961      0.135751      0.790062   \n",
+       "std     17439.297893      0.117609      0.097470      0.038175      0.457591   \n",
+       "min     90615.000000      0.075000      0.055000      0.000000      0.002000   \n",
+       "25%    105717.500000      0.450000      0.345000      0.110000      0.419500   \n",
+       "50%    120820.000000      0.545000      0.425000      0.140000      0.801500   \n",
+       "75%    135922.500000      0.600000      0.470000      0.160000      1.070000   \n",
+       "max    151025.000000      0.800000      0.650000      1.095000      2.825500   \n",
+       "\n",
+       "       whole_weight1  whole_weight2  shell_weight  \n",
+       "count   60411.000000   60411.000000  60411.000000  \n",
+       "mean        0.341227       0.169419      0.226125  \n",
+       "std         0.204221       0.100720      0.129826  \n",
+       "min         0.001000       0.000500      0.001500  \n",
+       "25%         0.178500       0.086500      0.120000  \n",
+       "50%         0.329000       0.166000      0.225000  \n",
+       "75%         0.464500       0.232500      0.305000  \n",
+       "max         1.488000       0.641500      1.004000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe() #A quick overview before we continue. Will comment if I find somthing interesting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "dec99480",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>length</th>\n",
+       "      <th>diameter</th>\n",
+       "      <th>height</th>\n",
+       "      <th>whole_weight</th>\n",
+       "      <th>whole_weight1</th>\n",
+       "      <th>whole_weight2</th>\n",
+       "      <th>shell_weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>34067</th>\n",
+       "      <td>124682</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>0.445</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.8725</td>\n",
+       "      <td>0.305</td>\n",
+       "      <td>0.190</td>\n",
+       "      <td>0.305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42004</th>\n",
+       "      <td>132619</td>\n",
+       "      <td>I</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.195</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0840</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>0.049</td>\n",
+       "      <td>0.031</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           id sex  length  diameter  height  whole_weight  whole_weight1  \\\n",
+       "34067  124682   M    0.56     0.445     0.0        0.8725          0.305   \n",
+       "42004  132619   I    0.27     0.195     0.0        0.0840          0.025   \n",
+       "\n",
+       "       whole_weight2  shell_weight  \n",
+       "34067          0.190         0.305  \n",
+       "42004          0.049         0.031  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Alas, more 0s in heights as we should expect...\n",
+    "df[df['height'] <= 0]#Hmm, since we have to give some prediction for them we can't just drop them..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "08c2e687",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#The following is somwhat arbitrary since I'm not properly doing this... ie if I wanted to be specific I would do a proxy\n",
+    "#per the three most influential factors... we'll just do this instead...Perhaps I also should have done per gender, but whatever...\n",
+    "#just 2 guys out of the 60kish we're validating on...\n",
+    "\n",
+    "df[df['diameter']==.445]['height'].median() #Using median to approximate a fill-in height, being relative more unbiased to\n",
+    "#outliers and skew than the mean would be."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2921361a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.065"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['diameter']==.195]['height'].median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7b4bd344",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[34067, 4] = .15\n",
+    "df.iloc[34067, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0f3f0c06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.065"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[42004, 4] = .065\n",
+    "df.iloc[42004, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f00a236c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_csv('../data/cleaned_test.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
